more playground code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,10 @@
         "ProjectSettings/":true,
         "temp/":true,
         "Temp/":true
+    },
+    "files.associations": {
+        "list": "cpp",
+        "iostream": "cpp",
+        "ostream": "cpp"
     }
 }
